8289778: ZGC: incorrect use of os::free() for mountpoint string handling after JDK-8289633